[package]
name = "rust_json_lib_rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library for parsing JSON in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
